# handy-sdl

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  handy_sdl_main.cpp
src/Core/: cart.cpp  system.cpp
src/gui/: CMakeLists.txt  gui.cpp
src/handy-0.90/: cart.cpp  system.cpp
src/handy-0.95/: CMakeLists.txt
src/sdlemu/: CMakeLists.txt  handy_sdl_graphics.cpp  handy_sdl_graphics.h  handy_sdl_handling.cpp  handy_sdl_main.h  handy_sdl_sound.cpp  handy_sdl_sound.h  sdlemu_overlay.h
src/zlib-113/: CMakelists.txt
